создание hero and header

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,3 +6,5 @@
 @import 'block/map.scss';
 @import 'block/pdf.scss';
 @import 'block/plans.scss';
+@import 'block/header.scss';
+@import 'variables';
