--- a/scss/block/hero.scss
+++ b/scss/block/hero.scss
@@ -1,15 +1,18 @@
 @import '../variables.scss';
-.hero{
+
+.hero {
 	padding: 100px 0;
 	position: relative;
-	&__title{
+
+	&__title {
 		font-weight: bold;
 		font-size: 72px;
 		line-height: 140%;
 		max-width: 760px;
 		color: $Grayscale50;
 		margin-bottom: 50px;
-		&::after{
+
+		&::after {
 			position: absolute;
 			content: '';
 			top: 150px;
@@ -18,34 +21,45 @@
 			height: 2px;
 			background: $Backgroundcolor;
 		}
-		&_smaller{
-			font-size: 54px;
+
+		&_smaller {
+			font-size: 52px;
 		}
 	}
-	.hero__image{
+
+	.hero__image {
 		width: 100%;
 		height: 600px;
 		object-fit: cover;
 	}
-	.hero__parametrs{
+
+	.hero__parametrs {
 		position: absolute;
 		right: 140px;
 		top: 240px;
+		background: $PrimaryBlue100;
 		display: flex;
+		width: 252px;
 		flex-direction: column;
 		align-items: center;
 		justify-content: space-around;
 		padding-top: 30px;
-		&__item{
-			display: block;
-			color: $White;
-			font-weight: 400;
-			font-size: 16px;
-			padding-bottom: 10px;
-			line-height: 160%;
-		}
-		strong{
-			font-size: 48px;
+
+		&__item {
+			padding: 40px 0;
+
+			span {
+				display: block;
+				color: $White;
+				font-weight: 400;
+				font-size: 16px;
+				padding-bottom: 10px;
+				line-height: 160%;
+			}
+
+			strong {
+				font-size: 48px;
+			}
 		}
 	}
 }
