--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,4 @@
-*{
+* {
 	margin: 0;
 	padding: 0;
 	font-family: 'Montserrat', sans-serif;
@@ -6,12 +6,25 @@
 	box-sizing: border-box;
 }
 
-a{
+a {
 	text-decoration: none;
 	color: inherit;
 }
 
-.container{
+.container {
 	width: 1200px;
 	margin: 0 auto;
+}
+
+@media screen and (max-width: 1279px) and (min-width:768px) {
+	.container {
+		width: 90vw;
+	}
+}
+
+@media screen and (max-width: 767px) {
+	.container {
+		width: auto;
+		margin: 0 15px;
+	}
 }
