--- a/scss/block/hero.scss
+++ b/scss/block/hero.scss
@@ -27,13 +27,17 @@
 		}
 	}
 
+	.large {
+		font-size: 52px;
+	}
+
 	.hero__image {
 		width: 100%;
 		height: 600px;
 		object-fit: cover;
 	}
 
-	.hero__parametrs {
+	.hero__parametrs_large {
 		position: absolute;
 		right: 140px;
 		top: 240px;
@@ -62,4 +66,60 @@
 			}
 		}
 	}
-}
+
+
+	.hero-nav {
+		display: none;
+	}
+
+	@media screen and (max-width:1279px) and (min-width:768px) {
+		.hero {
+			&__image {
+				height: 400px;
+			}
+
+			&__title {
+				font-size: 40px;
+				max-width: 480px;
+				color: $Grayscale50;
+				margin-bottom: 40px;
+
+				&::after {
+					top: 130px;
+					right: 0;
+					width: 30vw;
+				}
+
+				&_smaller {
+					font-size: 32px;
+				}
+			}
+
+			&__parametrs_large {
+				position: static;
+				width: 100%;
+				flex-direction: row;
+				justify-content: space-evenly;
+
+				&:not(.hero__parametrs_large) {
+					position: absolute;
+					top: auto;
+					right: 0;
+					height: 160px;
+					width: 240px;
+				}
+
+				&__item {
+					padding: 30px 0;
+
+					strong {
+						font-size: 40px;
+					}
+				}
+			}
+		}
+	}
+
+	@media screen and (max-width:767px) {
+		
+	}
