--- a/scss/block/inf.scss
+++ b/scss/block/inf.scss
@@ -1,4 +1,4 @@
-@import 'variables.scss';
+@import '../variables.scss';
 
 .inf {
 	position: relative;
@@ -13,12 +13,29 @@
 		color: $Grayscale50;
 	}
 
-	&_affter::after {
+	p {
+		font-size: 18px;
+		font-weight: 400;
+		line-height: 160%;
+		color: $Grayscale10;
+		padding: 45px 0 100px 0;
+	}
+
+	.inf__title_affter {
+		font-size: 16px;
+		font-weight: 500;
+		line-height: 150%;
+		text-transform: uppercase;
+		color: $Backgroundcolor;
+		padding-bottom: 20px;
+	}
+
+	.inf__title_affter::after {
 		position: absolute;
 		content: '';
-		top: 150px;
-		right: 0;
-		width: 400px;
+		top: 10px;
+		left: 110px;
+		width: 500px;
 		height: 2px;
 		background: $Backgroundcolor;
 	}
