--- a/scss/block/hero.scss
+++ b/scss/block/hero.scss
@@ -27,17 +27,13 @@
 		}
 	}
 
-	.large {
-		font-size: 52px;
-	}
-
 	.hero__image {
 		width: 100%;
 		height: 600px;
 		object-fit: cover;
 	}
 
-	.hero__parametrs_large {
+	.hero__parametrs {
 		position: absolute;
 		right: 140px;
 		top: 240px;
@@ -66,60 +62,123 @@
 			}
 		}
 	}
+}
 
+.hero-nav {
+	display: none;
+}
 
-	.hero-nav {
-		display: none;
+@media screen and (max-width: 1279px) and (min-width: 768px) {
+	.hero {
+		&__image {
+			height: 400px;
+		}
+
+		&__title {
+			font-size: 40px;
+			max-width: 480px;
+			color: $Grayscale50;
+			margin-bottom: 40px;
+
+			&::after {
+				top: 130px;
+				right: 0;
+				width: 30vw;
+			}
+
+			&_smaller {
+				font-size: 32px;
+			}
+		}
+
+		&__parametrs {
+			position: static;
+			width: 100%;
+			flex-direction: row;
+			justify-content: space-evenly;
+
+			&:not(.hero__parametrs_large) {
+				position: absolute;
+				top: auto;
+				right: 0;
+				height: 160px;
+				width: 240px;
+			}
+
+			&__item {
+				padding: 30px 0;
+
+				strong {
+					font-size: 40px;
+				}
+			}
+		}
 	}
+}
 
-	@media screen and (max-width:1279px) and (min-width:768px) {
-		.hero {
-			&__image {
-				height: 400px;
+@media screen and (max-width: 767px) {
+	.hero {
+		padding: 50px 0;
+
+		&__image {
+			height: 200px;
+		}
+
+		&__title {
+			font-size: 24px;
+			max-width: 100%;
+			margin-bottom: 200px;
+
+			&::after {
+				width: 0;
 			}
 
-			&__title {
-				font-size: 40px;
-				max-width: 480px;
-				color: $Grayscale50;
-				margin-bottom: 40px;
+			&_smaller {
+				font-size: 24px;
+			}
+		}
 
-				&::after {
-					top: 130px;
-					right: 0;
-					width: 30vw;
-				}
+		&__parametrs {
+			position: static;
+			width: 100%;
+			flex-direction: row;
+			justify-content: space-evenly;
+			padding-top: 15px;
 
-				&_smaller {
-					font-size: 32px;
-				}
+			&:not(.hero__parametrs_large) {
+				position: absolute;
+				top: auto;
+				right: 0;
+				height: 90px;
+				width: 150px;
 			}
 
-			&__parametrs_large {
-				position: static;
-				width: 100%;
-				flex-direction: row;
-				justify-content: space-evenly;
+			&__item {
+				padding: 20px 0;
 
-				&:not(.hero__parametrs_large) {
-					position: absolute;
-					top: auto;
-					right: 0;
-					height: 160px;
-					width: 240px;
+				span {
+					font-size: 20px;
+					padding-bottom: 5px;
 				}
 
-				&__item {
-					padding: 30px 0;
-
-					strong {
-						font-size: 40px;
-					}
+				strong {
+					font-size: 20px;
 				}
 			}
 		}
 	}
 
-	@media screen and (max-width:767px) {
-		
+	.hero-nav {
+		display: flex;
+		width: 100%;
+		justify-content: space-between;
+
+		.nav__item {
+			font-size: 14px;
+			text-align: center;
+			flex: 1;
+			display: block;
+			margin: 15px 5px;
+		}
 	}
+}
