--- a/scss/block/inf.scss
+++ b/scss/block/inf.scss
@@ -1,6 +1,6 @@
 @import '../variables.scss';
 
-.inf {
+.inf-content {
 	position: relative;
 	display: flex;
 	flex-direction: column;
@@ -38,5 +38,83 @@
 		width: 500px;
 		height: 2px;
 		background: $Backgroundcolor;
+	}
+}
+
+.container-circle {
+	width: 100%;
+}
+
+.infoadd__circle {
+	display: flex;
+	width: 100%;
+	background: $PrimaryBlue100;
+	padding: 55px 50px;
+	gap: 10%;
+	flex-wrap: wrap;
+}
+
+.infoadd__circle_item {
+	display: flex;
+	align-items: center;
+	gap: 30px;
+	width: 470px;
+
+	.image {
+		overflow: hidden;
+		width: 100px;
+		height: 100px;
+		flex-shrink: 0;
+		border-radius: 100px;
+		margin: 10px 0;
+
+		img {
+			width: 200px;
+		}
+	}
+
+	span {
+		font-size: 20px;
+		font-weight: 600;
+		line-height: 120%;
+		color: $White;
+	}
+
+	.infoadd__circle_item-left {
+		display: flex;
+		gap: 25px;
+		margin-right: 120px;
+	}
+}
+
+.block__right-text {
+	display: flex;
+	width: 100%;
+	flex-direction: column;
+	align-items: flex-end;
+
+	.right-text {
+		width: 634px;
+		margin-top: 90px;
+		font-size: 18px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: 160%;
+		color: $Grayscale10;
+	}
+
+	.right-button {
+		margin-right: 435px;
+		background: $PrimaryBlue100;
+		width: 200px;
+		padding: 14px 32px;
+		margin-top: 20px;
+
+		a {
+			font-size: 14px;
+			font-weight: 500;
+			line-height: 150%;
+			color: $White;
+		}
 	}
 }
