--- a/scss/block/inf.scss
+++ b/scss/block/inf.scss
@@ -38,6 +38,7 @@
 		width: 500px;
 		height: 2px;
 		background: $Backgroundcolor;
+		margin-left: 30px;
 	}
 }
 
@@ -95,12 +96,12 @@
 
 	.right-text {
 		width: 634px;
-		margin-top: 90px;
 		font-size: 18px;
 		font-style: normal;
 		font-weight: 400;
 		line-height: 160%;
 		color: $Grayscale10;
+		margin: 0;
 	}
 
 	.right-button {
