--- a/scss/block/hero.scss
+++ b/scss/block/hero.scss
@@ -16,7 +16,7 @@
 			position: absolute;
 			content: '';
 			top: 150px;
-			right: 0;
+			right: 0px;
 			width: 400px;
 			height: 2px;
 			background: $Backgroundcolor;
