--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,15 +16,14 @@ a {
 	margin: 0 auto;
 }
 
-@media screen and (max-width: 1279px) and (min-width:768px) {
+@media screen and (max-width: 1279px) and (width:768px) {
 	.container {
-		width: 90vw;
+		width: 80vw;
 	}
 }
 
 @media screen and (max-width: 767px) {
 	.container {
-		width: auto;
-		margin: 0 15px;
+		width: 90vw;
 	}
 }
