--- a/scss/block/inf.scss
+++ b/scss/block/inf.scss
@@ -89,12 +89,11 @@
 
 .block__right-text {
 	display: flex;
-	width: 100%;
 	flex-direction: column;
-	align-items: flex-end;
 
 	.right-text {
-		width: 634px;
+		width: 680px;
+		display: flex;
 		font-size: 18px;
 		font-style: normal;
 		font-weight: 400;
@@ -116,5 +115,75 @@
 			line-height: 150%;
 			color: $White;
 		}
+	}
+}
+
+@media screen and (max-width:767px) {
+	.block__right-text {
+		.right-text {
+			width: 380px;
+			font-size: 14px;
+		}
+	}
+
+	.infoadd__circle_item span {
+		font-size: 16px;
+		width: 200px;
+	}
+
+	.infoadd__circle_item img {
+		width: 100px;
+	}
+
+	.infoadd__circle_item {
+		.image {
+			width: 70px;
+			height: 70px;
+		}
+	}
+
+	.infostr__content {
+		overflow-x: hidden;
+	}
+
+	.infostr__content h2 {
+		font-size: 24px;
+	}
+
+	.pdf {
+		flex-direction: column;
+	}
+
+	.flex-container-img img {
+		margin-top: 100px
+	}
+
+	.pdf__title::after {
+		width: 250px;
+	}
+
+	.infoadd__circle {
+		padding: 40px;
+	}
+
+	.flex-container {
+		h2 {
+			font-size: 25px;
+		}
+	}
+
+	main {
+		overflow-x: hidden;
+		width: 400px;
+		padding: 0;
+		margin: 0;
+	}
+
+	.inf-content h2 {
+		font-size: 24px;
+	}
+
+	.infostr__grid {
+		grid-template-rows: repeat(auto-fill, minmax(200px 1fr));
 	}
 }
