--- a/scss/block/hero.scss
+++ b/scss/block/hero.scss
@@ -138,7 +138,7 @@
 			}
 		}
 
-		&__parametrs {
+		.hero__parametrs {
 			position: static;
 			width: 100%;
 			flex-direction: row;
@@ -153,11 +153,14 @@
 				width: 150px;
 			}
 
-			&__item {
+			.hero__parametrs__item {
+				display: flex;
+				align-items: center;
 				padding: 20px 0;
+				flex-direction: column;
 
 				span {
-					font-size: 20px;
+					font-size: 10px;
 					padding-bottom: 5px;
 				}
 
