--- a/scss/block/infostr.scss
+++ b/scss/block/infostr.scss
@@ -54,7 +54,7 @@
 
 .item_1 {
 	grid-column: span 2;
-	background: url(/assets/images/infostr/left-1.png);
+	background: url(./assets/images/infostr/left-1.png);
 	display: flex;
 	width: 600px;
 	height: 300px;
@@ -63,7 +63,7 @@
 
 .item_4 {
 	display: flex;
-	background: url(/assets/images/infostr/left-3.png);
+	background: url(./assets/images/infostr/left-3.png);
 	width: 290px;
 	height: 300px;
 	padding: 20px;
@@ -71,7 +71,7 @@
 
 .item_3 {
 	display: flex;
-	background: url(/assets/images/infostr/right-2.png);
+	background: url(./assets/images/infostr/right-2.png);
 	width: 290px;
 	height: 300px;
 	padding: 20px;
@@ -79,7 +79,7 @@
 
 .item_4 {
 	display: flex;
-	background: url(/assets/images/infostr/left-2.png);
+	background: url(./assets/images/infostr/left-2.png);
 	width: 290px;
 	height: 300px;
 	padding: 10px;
@@ -88,7 +88,7 @@
 .item_2 {
 	display: flex;
 	grid-row: span 2;
-	background: url(/assets/images/infostr/right-1.png);
+	background: url(./assets/images/infostr/right-1.png);
 	width: 290px;
 	height: 620px;
 	padding: 20px;
@@ -96,7 +96,7 @@
 
 .item_5 {
 	display: flex;
-	background: url(/assets/images/infostr/right-3.png);
+	background: url(./assets/images/infostr/right-3.png);
 	width: 290px;
 	height: 300px;
 	padding: 20px;
